# algorithm-introduction

./: .gitignore  pyproject.toml
2_getting_started/: insertion_sort.py
