[tool.poetry]
name = "algorithm-introduction"
version = "0.1.0"
description = ""
authors = ["otakumesi <bakednt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-language-server = {extras = ["all"], version = "^0.34.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
